--- a/account/templates/registration/reset_password.html
+++ b/account/templates/registration/reset_password.html
@@ -25,7 +25,7 @@
                     </form>
                 </div>
                 <div class="user-form-remind">
-                    <p>Go Back To<a href="{% url 'radio/login' %}">login here</a></p>
+                    <p>Go Back To<a href="{% url 'account/login' %}">login here</a></p>
                 </div>
                 <div class="user-form-footer">
                     <p>Greeny | &COPY; Copyright by <a href="#">Mironcoder</a></p>
