--- a/templates/partial/header.html
+++ b/templates/partial/header.html
@@ -12,7 +12,7 @@
             <a href="{% url 'radio:index' %}" class="header-logo">
                 <img src="{% static 'images/logo.png' %}" alt="logo">
             </a>
-            <a href="{% url 'radio:login' %}" class="header-widget" title="My Account">
+            <a href="{% url 'account:login' %}" class="header-widget" title="My Account">
                 <img src="{% static 'images/user.png' %}" alt="user">
                 <span>join</span>
             </a>
