--- a/account/templates/registration/register.html
+++ b/account/templates/registration/register.html
@@ -55,7 +55,7 @@
         </div>
         </div>
         <div class="user-form-remind">
-        <p>Already Have An Account?<a href="{% url 'radio:login' %}">login here</a></p>
+        <p>Already Have An Account?<a href="{% url 'account:login' %}">login here</a></p>
         </div>
         <div class="user-form-footer">
         <p>Greeny | &COPY; Copyright by <a href="#">Mironcoder</a></p>
