--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="{% static 'vendor/bootstrap/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/home-standard.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/mycss/styles.css' %}">
 </head>
   
     
