--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'auth_base.html' %}
 
 {% load static %}
 
@@ -50,7 +50,7 @@
                     <p>Don't have any account?<a href="{% url 'account:register' %}">register here</a></p>
                 </div>
                 <div class="user-form-footer">
-                    <p>Greeny | &COPY; Copyright by <a href="#">Mironcoder</a></p>
+                    <p>RMS | &COPY; Copyright by <a href="#">ELSIR SAAD</a></p>
                 </div>
             </div>
         
