--- a/account/templates/registration/register.html
+++ b/account/templates/registration/register.html
@@ -5,7 +5,7 @@
         <!--=====================================
                     USER FORM PART START
         =======================================-->
-        {% extends 'layouts/base.html' %}
+        {% extends 'auth_base.html' %}
          {% load static %}
         {% block content %}
         <link rel="stylesheet" href="{% static 'css/user-auth.css' %}">
@@ -58,7 +58,7 @@
         <p>Already Have An Account?<a href="{% url 'account:login' %}">login here</a></p>
         </div>
         <div class="user-form-footer">
-        <p>Greeny | &COPY; Copyright by <a href="#">Mironcoder</a></p>
+            <p>RMS | &COPY; Copyright by <a href="#">ELSIR SAAD</a></p>
                         </div>
                     </div>
                 </div>
