--- a/templates/partial/header_top.html
+++ b/templates/partial/header_top.html
@@ -1,4 +1,4 @@
-<div class="header-top alert fade show">
+<div class="header-top alert fade show header-top.fixed">
     <p>welcome to michwa general hospital <a href="{% url 'account:register' %}">get register</a></p>
     <button data-bs-dismiss="alert"><i class="fas fa-times"></i></button>
 </div>
