--- a/account/templates/registration/change_password.html
+++ b/account/templates/registration/change_password.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'auth_base.html' %}
+{% load static %} 
 
 {% block content %}
     <section class="user-form-part">
@@ -6,14 +7,14 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
                     <div class="user-form-logo">
-                        <a href="{% url 'home' %}"><img src="{% static 'images/logo.png' %}" alt="logo"></a>
+                        <a href="{% url 'radio:index' %}"><img src="{% static 'images/logo.png' %}" alt="logo"></a>
                     </div>
                     <div class="user-form-card">
                         <div class="user-form-title">
                             <h2>any issue?</h2>
                             <p>Make sure your current password is strong</p>
                         </div>
-                        <form class="user-form" method="post" action="{% url 'change_password' %}">
+                        <form class="user-form" method="post" action="{% url 'account:change_password' %}">
                             {% csrf_token %}
                             <div class="form-group">
                                 <input type="password" class="form-control" placeholder="Old password" name="old_password">
@@ -30,10 +31,10 @@
                         </form>
                     </div>
                     <div class="user-form-remind">
-                        <p>Go Back To<a href="{% url 'login' %}">login here</a></p>
+                        <p>Go Back To<a href="{% url 'account:login' %}">login here</a></p>
                     </div>
                     <div class="user-form-footer">
-                        <p>Greeny | &COPY; Copyright by <a href="#">Mironcoder</a></p>
+                        <p>RMS | &COPY; Copyright by <a href="#">ELSIR SAAD</a></p>
                     </div>
                 </div>
             </div>
