--- a/account/templates/registration/reset_password.html
+++ b/account/templates/registration/reset_password.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'auth_base.html' %}
 {% load static %}
 
 {% block content %}
@@ -7,7 +7,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
                 <div class="user-form-logo">
-                    <a href="{% url 'radio/index' %}"><img src="{% static 'images/logo.png' %}" alt="logo"></a>
+                    <a href="{% url 'radio:index' %}"><img src="{% static 'images/logo.png' %}" alt="logo"></a>
                 </div>
                 <div class="user-form-card">
                     <div class="user-form-title">
@@ -25,10 +25,10 @@
                     </form>
                 </div>
                 <div class="user-form-remind">
-                    <p>Go Back To<a href="{% url 'account/login' %}">login here</a></p>
+                    <p>Go Back To<a href="{% url 'account:login' %}">login here</a></p>
                 </div>
                 <div class="user-form-footer">
-                    <p>Greeny | &COPY; Copyright by <a href="#">Mironcoder</a></p>
+                    <p>RMS | &COPY; Copyright by <a href="#">ELSIR SAAD</a></p>
                 </div>
             </div>
         </div>
