--- a/static/css/index.css
+++ b/static/css/index.css
@@ -7,22 +7,7 @@ body {
   background-position: center;
 }
 
-.header-top {
-  position: fixed;
-  top: 0;
-  /* Other styling */
-}
-.header {
-  position: fixed;
-  top: 0;
-  /* Other styling */
-}
-.sidebar {
-  position: fixed;
-  left: 0;
-  width: 200px;
-  height: 100%;
-}
+
 
 
 .home-index-slider .dandik {
@@ -217,4 +202,10 @@ body {
   .blog-slider .blog-card {
     margin: 0px 10px 25px;
   }
+}
+
+.profileimage  {
+  width: 80px;
+  border-radius: 50%;
+  border: 3px solid var(--white);
 }
