--- a/templates/partial/footer.html
+++ b/templates/partial/footer.html
@@ -79,7 +79,7 @@
                                 <div class="row">
                                     <div class="col-12">
                                         <div class="footer-bottom">
-                                            <p class="footer-copytext">&copy; All Copyrights Reserved by <a target="_blank" href="https://themeforest.net/user/mironcoder">Mironcoder</a></p>
+                                            <p class="footer-copytext">&copy; All Copyrights Reserved by <a target="_blank" href="https://themeforest.net/user/mironcoder">Elsir Saad</a></p>
                                             <div class="footer-card">
                                                 <a href="#"><img src="{% static 'images/payment/jpg/01.jpg' %}" alt="payment"></a>
                                                 <a href="#"><img src="{% static 'images/payment/jpg/02.jpg' %}" alt="payment"></a>
