--- a/templates/partial/sidebar.html
+++ b/templates/partial/sidebar.html
@@ -64,7 +64,7 @@
             </li>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'radio:radiologist_portal' %}">Radiologist</a>
+            <a class="nav-link" href="{% url 'radio:radiologist' %}">Radiologist</a>
         </li>
          
         <li class="nav-item">
